# event_manager

./: Anchor.toml  README.md  event_manager-keypair.json  package-lock.json  package.json
programs/event_manager/: Cargo.toml
programs/event_manager/src/: lib.rs
programs/event_manager/src/collections/: event.rs
programs/event_manager/src/instructions/: end_event.rs  mod.rs  new_event.rs  remove_event.rs
programs/event_manager/src/utility/: error.rs
tests/: event_manager.ts
