[package]
name = "event_manager"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "event_manager"

# [features]
# default = []
# cpi = ["no-entrypoint"]
# no-entrypoint = []
# no-idl = []
# no-log-ix-name = []
# idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
# anchor-lang = "0.29.0"
# anchor-spl = "0.29.0"
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
# solana-program = "1.18.26"
